# spine-conductor

./: .gitignore  README.md  design.md  notes.md  pyproject.toml  release.md  tag_release.py
.github/actions/build-wheel/: action.yml
.github/actions/download-wheel/: action.yml
.github/workflows/: publish-wheel.yml  test-n-publish.yml  test-wheel.yml  unittests.yml
docs/: 01-cross-testing.md  README.md  design.md  making-a-release.md
orchestra/: __init__.py  __main__.py  compat_matrix.py  config.py  pkgindex.py  publish.py  release.py  runner.py
tests/: conftest.py  scm.toml  test_config.py  test_errorcodes.py  test_publish.py  test_release.py  test_runner.py
