[project]
name = "spine-conductor"
version = "0.1.dev"
description = "Release orchestration & automation scripts for Spine tools"
requires-python = ">=3.10"  # easier type hints, pattern matching
dependencies = [
     "gitpython",
     "packaging",
     "pypi-simple",
     "pytest",
     "rich",
     "setuptools_scm",
     "tomlkit",
     "typer",
     "wheel",
]

[project.scripts]
conduct = "orchestra:cli"
