[project]
name = "spine-conductor"
version = "0.1.dev"
description = "Release orchestration & automation scripts for Spine tools"
requires-python = ">=3.10"  # easier type hints, pattern matching
dependencies = [
     "gitpython",
     "packaging",
     "pypi-simple",
     "pytest",
     "rich",
     "setuptools_scm",
     "tomlkit",
     "typer",
     "wheel",
]

[tool.setuptools.packages.find]
include = ["orchestra"]

[project.scripts]
conduct = "orchestra:__main__.cli"

[tool.mypy]
ignore_missing_imports = true
